2011-09-27  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: UI performance: introduce heap size tracking stats.
        https://bugs.webkit.org/show_bug.cgi?id=68901

        It is interesting how much the heap memory is used by Inspector in order of running the test.

        Reviewed by Yury Semikhatsky.

        * inspector/performance/resources/network-append-30-requests.html:
        * inspector/performance/resources/performance-test.js:
        (initialize_TimeTracker.InspectorTest.runPerformanceTest.Timer):
        (initialize_TimeTracker.InspectorTest.runPerformanceTest.Timer.prototype._getJSHeapSize):
        (initialize_TimeTracker.InspectorTest.runPerformanceTest.Timer.prototype.done):
        (initialize_TimeTracker.InspectorTest.runPerformanceTest.Timer.prototype._dump):

2011-09-27  W. James MacLean  <wjmaclean@chromium.org>

        Layout Test platform/chromium/compositing/zoom-animator-scale-test.html is failing.
        https://bugs.webkit.org/show_bug.cgi?id=68852

        Rebaseline GPU tests for Mac, Win.

        Reviewed by Shinichiro Hamaji.

        * platform/chromium-gpu-cg-mac/platform/chromium/compositing/zoom-animator-scale-test-expected.png:
        * platform/chromium-gpu-mac/platform/chromium/compositing/zoom-animator-scale-test-expected.png:
        * platform/chromium-gpu-win/platform/chromium/compositing/zoom-animator-scale-test-expected.png:
        * platform/chromium/test_expectations.txt:

2011-09-27  Ben Wagner  <bungeman@chromium.org>

        Clipped high quality blur in skia has been fixed. Rebaseline layout tests.
        https://bugs.webkit.org/show_bug.cgi?id=68577

        Reviewed by Kenneth Russell.

        * platform/chromium-linux-x86/fast/box-shadow: Removed.
        * platform/chromium-linux/fast/box-shadow/inset-box-shadows-expected.png:
        * platform/chromium-mac/fast/box-shadow/inset-box-shadow-radius-expected.png: