@@ -1,5 +1,13 @@
 2011-09-27  Ilya Tikhonovsky  <loislo@chromium.org>
 
+        Unreviewed followupfix for r96110.
+        This is a small adjustment of the heap size delta calculation.
+
+        * inspector/performance/resources/performance-test.js:
+        (initialize_TimeTracker.InspectorTest.runPerformanceTest.Timer.prototype.done):
+
+2011-09-27  Ilya Tikhonovsky  <loislo@chromium.org>
+
         Web Inspector: UI performance: introduce heap size tracking stats.
         https://bugs.webkit.org/show_bug.cgi?id=68901
 
